<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityRicerca"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="false"
    android:background="@color/actionBarColor">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:background="@android:color/white">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal">

            <TableRow android:paddingBottom="10dp"
                android:paddingTop="30dp"
                android:layout_marginBottom="15dp"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/labelPartenza"
                    android:id="@+id/textView1"
                    android:paddingRight="15dp" />

                <EditText
                    android:layout_width="223dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtPartenza"
                    android:textColorHint="#f39d9d9d"
                    android:hint="@string/hintPartenza"
                    android:singleLine="true"
                    android:shadowColor="@android:color/black"/>
            </TableRow>

            <TableRow
                android:layout_marginBottom="15dp"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/labelArrivo"
                    android:id="@+id/textView2" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtArrivo"
                    android:textColorHint="#f39d9d9d"
                    android:hint="@string/hintArrivo"
                    android:singleLine="true" />
            </TableRow>

            <TableRow
                android:layout_marginBottom="15dp"
                android:layout_width="fill_parent"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_gravity="center_vertical"
                    android:text="@string/labelData"
                    android:id="@+id/textView3" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonData"
                    android:id="@+id/buttonData"
                    android:background="@drawable/corners_button"
                    android:textColor="@android:color/white"/>
            </TableRow>

            <TableRow android:gravity="center_horizontal"

                android:layout_marginBottom="15dp"
                android:layout_width="fill_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_gravity="center_vertical"
                    android:text="@string/labelOra"
                    android:id="@+id/textView4" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonOra"
                    android:id="@+id/buttonOra"
                    android:background="@drawable/corners_button"
                    android:textColor="@android:color/white" />
            </TableRow>

            <TableRow android:gravity="center_horizontal"
                android:layout_marginBottom="50dp"
                android:layout_width="fill_parent">
                <CheckBox
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/labelMobRidotta"
                    android:id="@+id/checkMobRidotta"
                    android:checked="false"
                    android:paddingLeft="7dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_span="2" />
            </TableRow>

            <TableRow android:gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_width="fill_parent">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buttonRicerca"
                    android:id="@+id/buttonRicerca"
                    android:layout_gravity="center_horizontal"
                    android:layout_span="2"
                    android:singleLine="false"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/corners_button"
                    android:textColor="@color/text_button_disabled"/>
            </TableRow>

            <TableRow android:gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_width="fill_parent">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/textBigliettoTimbrato"
                    android:layout_span="2"
                    android:layout_gravity="center_horizontal"
                    android:text="Waiting for NDEF message"/>
            </TableRow>

        </TableLayout>
    </ScrollView>
</RelativeLayout>